src/test/deca/context/invalid/homemade/arith_op_not_number_decompile.res
{
	boolean a = false;
	int b = 2;
	(b = (a * b));
}
